--- a/dnf-helper/dnf-helper.vcxproj.filters
+++ b/dnf-helper/dnf-helper.vcxproj.filters
@@ -5,13 +5,13 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="头文件">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="资源文件">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="源文件\头文件">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -63,49 +63,49 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="keyboard.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="readwrite.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="common.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="pack.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="call.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="helper.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="address.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="action.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="judge.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="pass_map.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="simulate.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="auto.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="config.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="route.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
     <ClInclude Include="task.h">
-      <Filter>头文件</Filter>
+      <Filter>源文件\头文件</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
