--- a/dnf-helper/dnf-helper.vcxproj
+++ b/dnf-helper/dnf-helper.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="common.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="dnf-helper.cpp" />
+    <ClCompile Include="fastcall.cpp" />
     <ClCompile Include="helper.cpp" />
     <ClCompile Include="judge.cpp" />
     <ClCompile Include="keyboard.cpp" />
@@ -150,6 +151,7 @@
     <ClInclude Include="call.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="config.h" />
+    <ClInclude Include="fastcall.h" />
     <ClInclude Include="helper.h" />
     <ClInclude Include="judge.h" />
     <ClInclude Include="keyboard.h" />
