--- a/dnf-helper/dnf-helper.vcxproj.filters
+++ b/dnf-helper/dnf-helper.vcxproj.filters
@@ -63,6 +63,18 @@
     <ClCompile Include="fastcall.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="dm.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="dmrw.h">
+      <Filter>源文件\头文件</Filter>
+    </ClCompile>
+    <ClCompile Include="dmrw.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="keyboard.h">
@@ -113,5 +125,17 @@
     <ClInclude Include="fastcall.h">
       <Filter>源文件\头文件</Filter>
     </ClInclude>
+    <ClInclude Include="msdk.h">
+      <Filter>源文件\头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="dm.h">
+      <Filter>源文件\头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>源文件\头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="msdk.lib" />
   </ItemGroup>
 </Project>
